Update SaveFile, Main and HazeDatabase