@@ -53,8 +53,6 @@
           <compilerArgs>
             --enable-preview
           </compilerArgs>
-          <source>19</source>
-          <target>19</target>
         </configuration>
       </plugin>
       <plugin>
@@ -119,9 +117,6 @@
             </goals>
           </execution>
         </executions>
-        <configuration>
-          <argLine>--enable-preview</argLine>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
@@ -155,7 +150,6 @@
           <environmentVariables>
             <HAZE_PORT>6380</HAZE_PORT>
           </environmentVariables>
-          <argLine>--enable-preview</argLine>
         </configuration>
       </plugin>
     </plugins>
